src/main/metadata/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>AllReFerralsWonCreated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Number of Referrals Won in this Quarter.</description>
        <label>AllReFerralsWonCreated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllReferralsCreated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Number of Referrals Created in this Quarter</description>
        <label>AllReferralsCreated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mercedes Benz Japan</fullName>
                </value>
                <value>
                    <fullName>Mercedes Benz Finance</fullName>
                </value>
                <value>
                    <fullName>Daimler Insurance Services Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name_Native__c</fullName>
        <label>First Name Native</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Native__c</fullName>
        <label>Last Name Native</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                    <default>true</default>
                    <label>JP</label>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_closed_Won__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of closed Won this Quarter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_referral__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of referrals created this Quarter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Employee_s_Number_of_Generated_Lea__c</fullName>
        <description>Total Number of Referrals Created by other Employees in this quarter</description>
        <formula>AllReferralsCreated__c -  No_of_referral__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Employee’s Number of Generated Lea</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Employee_s_Sales_Amount__c</fullName>
        <description>Total Number of Referrals Won Created by other Employees in this quarter</description>
        <formula>AllReFerralsWonCreated__c -  No_of_closed_Won__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Employee’s Sales Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <formula>ReferralsCreated__c *5 + ReferralsWon__c *25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank_of_Employee_with_closed_won__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rank of Employee with closed won</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank_of_Employee_with_referrals_made__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rank of Employee with referrals made</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferralsCreated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ReferralsCreated</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferralsWon__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ReferralsWon</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Market__c</columns>
        <columns>Rank__c</columns>
        <columns>Points__c</columns>
        <columns>Rank_of_Employee_with_referrals_made__c</columns>
        <columns>No_of_referral__c</columns>
        <columns>ReferralsCreated__c</columns>
        <columns>Rank_of_Employee_with_closed_won__c</columns>
        <columns>No_of_closed_Won__c</columns>
        <columns>ReferralsWon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Japan_View</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Rank_of_Employee_with_referrals_made__c</columns>
        <columns>No_of_referral__c</columns>
        <columns>ReferralsCreated__c</columns>
        <columns>Rank_of_Employee_with_closed_won__c</columns>
        <columns>No_of_closed_Won__c</columns>
        <columns>ReferralsWon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <label>Japan View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SG_View</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Rank__c</columns>
        <columns>ReferralsCreated__c</columns>
        <columns>ReferralsWon__c</columns>
        <columns>Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>SG</value>
        </filters>
        <label>SG View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>Employee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>